--- a/ls1/package.json
+++ b/ls1/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "json-server": "^1.0.0-alpha.16",
         "nodemon": "^3.0.2"
     }
 }
